📝 GC 심화 (G1 Region, RSet, TLAB) + 힙 덤프와 메모리 릭